// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attach / Detach form component should render Attach Cloud Volume to the Selected Instance form 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Volume
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="device_mountpoint"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Device Mountpoint
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="device_mountpoint"
              name="device_mountpoint"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Attach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should render Attach Selected Cloud Volume to an Instance form 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Instance
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="device_mountpoint"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Device Mountpoint
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="device_mountpoint"
              name="device_mountpoint"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Attach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should render Detach Cloud Volume from the Selected Instance form 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Volume
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Detach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary"
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should render Detach Selected Cloud Volume from an Instance form 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Instance
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Detach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary"
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should render form 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            Select
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Attach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary"
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should submit Attach API call 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Instance
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="device_mountpoint"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Device Mountpoint
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="device_mountpoint"
              name="device_mountpoint"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Attach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Attach / Detach form component should submit Detach API call 1`] = `
<div>
  <div
    class="tasks-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="dropdown_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            Volume
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="dropdown_id"
              name="dropdown_id"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="server1"
                value="1"
              >
                server1
              </option>
              <option
                class="cds--select-option"
                label="server2"
                value="2"
              >
                server2
              </option>
              <option
                class="cds--select-option"
                label="server3"
                value="3"
              >
                server3
              </option>
              <option
                class="cds--select-option"
                label="server4"
                value="4"
              >
                server4
              </option>
              <option
                class="cds--select-option"
                label="server5"
                value="5"
              >
                server5
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          id="submit"
          type="submit"
        >
          Detach
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary"
          id="reset"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
